[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[project]
name = "pytmv1"
description = "Python library for Trend Micro Vision One"
license = "Apache-2.0"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
    { name = "Thomas Legros", email = "thomas_legros@trendmicro.com" }
]
maintainers = [
    { name = "TrendATI", email = "ati-integration@trendmicro.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "beautifulsoup4 ~= 4.11.1",
    "requests ~= 2.27.1",
    "pydantic ~= 1.10.4",
]

[project.optional-dependencies]
dev = [
    "hatch ~= 1.6.3",
    "psutil ~= 5.9.4",
    "pytest ~= 7.2.0",
    "pytest-mock ~= 3.10.0",
    "pytest-cov ~= 4.0.0",
]

[project.urls]
"Source" = "https://github.com/TrendATI/pytmv1"
"Issues" = "https://github.com/TrendATI/pytmv1/issues"

[tool.hatch.build.targets.sdist]
exclude = [".github", "tests"]

[tool.hatch.version]
path = "src/pytmv1/__about__.py"

[tool.black]
target-version = ["py37"]
line-length = 79
preview = true
color = true

[tool.isort]
profile = "black"
line_length = 79
color_output = true

[tool.mypy]
python_version = "3.7"
exclude = ["dist", "tests", "venv"]
show_column_numbers = true
warn_unused_configs = true
pretty = true
strict = true

[tool.pytest.ini_options]
addopts = "--show-capture=log -s"